[package]
name = "gstreamer_pipeline_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
#gstreamer = "0.21.3"
gstreamer = { package="gstreamer", version = "0.24.1", features = ["v1_20", "serde"] }
anyhow = "1.0"
glob = "0.3.3"
strum = "0.27"
strum_macros = "0.27"
rustyline = "14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }